--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
   },
-  "homepage": "https://dcrimsoft.github.io/udb/",
+  "homepage": "https://dcrimsoft.github.io/udb",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
