--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "1.0.0-beta.55"
   },
   "homepage": "https://dcrimsoft.github.io/udb",
