--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
+
+
 {
   "name": "undeadblocks",
   "version": "0.1.0",
@@ -16,6 +18,7 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
     "identicon.js": "^2.3.3",
     "react": "16.8.4",
